--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "konva": "^7.0.2",
+    "vue": "^2.6.11",
+    "vue-konva": "^2.1.3",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
